--- a/NextHelloWorld/pages/flex/justify-content/justify-content.css
+++ b/NextHelloWorld/pages/flex/justify-content/justify-content.css
@@ -8,7 +8,7 @@
 		column: 从上到下
 		column-reverse: 从下到上
 	*/
-	flex-direction: column; 
+	flex-direction: row; 
 	
 	/*
 		设置元素在主轴上的对其方式
@@ -18,7 +18,7 @@
 		space-between: 两端对齐，元素之间平均等分剩余空白间隙部分
 		space-around: 元素两边平均等分剩余空白间隙部分，最左（上）或最右（下）和元素之间距离是1:2
 	 */
-	justify-content: space-between;
+	justify-content: center;
 	
 	height: 800upx;
 	background-color: #FFC0CB;
